# numhask-space

./: .gitignore  .hlint.yaml  .travis.yml  ChangeLog.md  cabal.project  hie.yaml  numhask-space.cabal  readme.md  stack.yaml
.github/workflows/: haskell-ci.yml
src/NumHask/: Histogram.hs  Point.hs  Range.hs  Rect.hs  Space.hs
src/NumHask/Space/: Histogram.hs  Point.hs  Range.hs  Rect.hs  Time.hs  Types.hs  XY.hs
test/: doctests.hs  test.hs
