cabal-version: 3.0
name: numhask-space
version: 0.12.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/numhask-space#readme
bug-reports: https://github.com/tonyday567/numhask-space/issues
synopsis: Numerical spaces.
description:
    @numhask-space@ provides support for spaces where [space](https://en.wikipedia.org/wiki/Space_(mathematics\)) is defined as a set of numbers with a lower and upper bound.

    == Usage

    >>> {-# LANGUAGE RebindableSyntax #-}
    >>> import NumHask.Prelude
    >>> import NumHask.Space


build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.6.5
    , GHC == 9.8.2
extra-doc-files: ChangeLog.md

source-repository head
    type: git
    location: https://github.com/tonyday567/numhask-space

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , adjunctions   >=4.0 && <5
        , base          >=4.14 && <5
        , containers    >=0.6 && <0.8
        , distributive  >=0.4 && <0.7
        , numhask       >=0.10 && <0.13
        , random        >=1.2 && <1.3
        , semigroupoids >=5.3 && <6.1
        , tdigest       >=0.2.1 && <0.4
        , text          >=1.2 && <2.2
        , time          >=1.9.1 && <1.15
        , vector        >=0.12.3 && <0.14
    exposed-modules:
        NumHask.Space
        NumHask.Space.Histogram
        NumHask.Space.Point
        NumHask.Space.Range
        NumHask.Space.Rect
        NumHask.Space.Time
        NumHask.Space.Types

test-suite doctests
    import: ghc2021-stanza
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends:
        , base             >=4.14 && <5
        , doctest-parallel >=0.3 && <0.4
        , numhask-space
    ghc-options: -threaded
    type: exitcode-stdio-1.0
